// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smooch-action-add-participant Everything is successful Walkthrough passes in the correct arguments to SmoochCore 1`] = `
Array [
  Array [
    Object {
      "keyId": undefined,
      "scope": "app",
      "secret": undefined,
      "serviceUrl": "mock-smooch-api-url",
    },
  ],
]
`;

exports[`smooch-action-add-participant Everything is successful Walkthrough passes in the correct arguments to axios 1`] = `Array []`;

exports[`smooch-action-add-participant Everything is successful Walkthrough passes in the correct arguments to smooch.appUsers.sendMessage() 1`] = `
Array [
  Array [
    Object {
      "appId": undefined,
      "message": Object {
        "metadata": Object {
          "from": "System",
          "interactionId": "667802d8-2260-436c-958a-2ee0f71f73f0",
          "type": "system",
        },
        "role": "appMaker",
        "text": "Agent connected.",
        "type": "text",
      },
      "userId": "5e31c81640a22c000f5d7f30",
    },
  ],
]
`;

exports[`smooch-action-add-participant Everything is successful Walkthrough passes in the correct arguments to sqs.getQueueUrl() in sendFlowActionResponse() 1`] = `
Array [
  Object {
    "QueueName": "us-east-1-dev-send-flow-response",
  },
]
`;

exports[`smooch-action-add-participant Everything is successful Walkthrough passes in the correct arguments to sqs.getQueueUrl() in sendMessageToParticipant() 1`] = `
Array [
  Object {
    "QueueName": "250faddb-9723-403a-9bd5-3ca710cb26e5_5e31c81640a22c000f5d7f33",
  },
]
`;

exports[`smooch-action-add-participant Everything is successful Walkthrough passes in the correct arguments to sqs.getQueueUrl() in updateInteractionMetadata() 1`] = `
Array [
  Object {
    "QueueName": "us-east-1-dev-update-interaction-metadata",
  },
]
`;

exports[`smooch-action-add-participant Everything is successful Walkthrough passes in the correct arguments to sqs.sendMessage() in sendFlowActionResponse() 1`] = `
Array [
  Object {
    "MessageBody": "{\\"tenantId\\":\\"250faddb-9723-403a-9bd5-3ca710cb26e5\\",\\"interactionId\\":\\"667802d8-2260-436c-958a-2ee0f71f73f0\\",\\"data\\":{\\"source\\":\\"smooch\\",\\"subId\\":\\"667802d8-2260-436c-958a-2ee0f71f73f1\\",\\"metadata\\":{},\\"update\\":{}}}",
    "QueueUrl": "queueurl",
  },
]
`;

exports[`smooch-action-add-participant Everything is successful Walkthrough passes in the correct arguments to sqs.sendMessage() in sendMessageToParticipant() 1`] = `
Array [
  Object {
    "MessageBody": "{\\"tenantId\\":\\"250faddb-9723-403a-9bd5-3ca710cb26e5\\",\\"interactionId\\":\\"667802d8-2260-436c-958a-2ee0f71f73f0\\",\\"actionId\\":\\"7534c040-534d-11ea-8aa0-c32d6a748e46\\",\\"subId\\":\\"7534c040-534d-11ea-8aa0-c32d6a748e46\\",\\"type\\":\\"send-message\\",\\"resourceId\\":\\"5e31c81640a22c000f5d7f33\\",\\"messageType\\":\\"received-message\\",\\"message\\":{\\"id\\":\\"7534c040-534d-11ea-8aa0-c32d6a748e46\\",\\"from\\":\\"System\\",\\"timestamp\\":\\"January 1 1970\\",\\"type\\":\\"system\\",\\"text\\":\\"Agent connected.\\"}}",
    "QueueUrl": "queueurl",
  },
]
`;

exports[`smooch-action-add-participant Everything is successful Walkthrough passes in the correct arguments to sqs.sendMessage() in updateInteractionMetadata() 1`] = `
Array [
  Object {
    "MessageBody": "{\\"tenantId\\":\\"250faddb-9723-403a-9bd5-3ca710cb26e5\\",\\"interactionId\\":\\"667802d8-2260-436c-958a-2ee0f71f73f0\\",\\"source\\":\\"smooch\\",\\"metadata\\":{\\"appId\\":\\"5e31c81640a22c000f5d7f28\\",\\"user-id\\":\\"5e31c81640a22c000f5d7f30\\",\\"participants\\":[{\\"resourceId\\":\\"5e31c81640a22c000f5d7f33\\"},{\\"resourceId\\":\\"5e31c81640a22c000f5d7f33\\",\\"sessionId\\":\\"667802d8-2260-436c-958a-2ee0f71f73f7\\",\\"type\\":\\"resource\\",\\"firstName\\":\\"Agent\\"}]}}",
    "QueueUrl": "queueurl",
  },
]
`;

exports[`smooch-action-add-participant throws an error when there is a error fetching user information 1`] = `"Error fetching user information"`;

exports[`smooch-action-add-participant throws an error when there is a problem retrieving cx credentials 1`] = `"Error retrieving cx credentials"`;

exports[`smooch-action-add-participant throws an error when there is a problem retrieving digital channels credentials (thrown by SmoochCore) 1`] = `"Error retrieving digital channels credentials"`;

exports[`smooch-action-add-participant throws an error when there is a problem retrieving digital channels credentials 1`] = `"Error retrieving digital channels credentials"`;

exports[`smooch-action-add-participant throws an error when there is a problem sending message 1`] = `"Error occurred sending message"`;

exports[`smooch-action-add-participant throws an error when there is a problem updating interaction metadata 1`] = `"Error updating interaction metadata"`;
